# se4ai_mlops_project

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/raw/: dataset.csv.dvc
docs/: canvas.md  mkdocs.yml
docs/docs/: index.md
metrics/: accuracy.json
reports/: ruff_result.json
src/: evaluation.py  experiment.py  featurization.py  preprocessing.py  split_dataset.py  train.py
src/app/: main.py  schema.py
src/models/: bert_classifier.py  neural_network.py
tests/code/: test_api.py  test_featurization.py  test_preprocessing.py  test_split_dataset.py
tests/data/: deep_checks_suite.py  great_expectation.py
tests/model/: test_behavioral.py  test_training.py
