[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Napoli Fabian" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99  # Maximum line length
src = ["src"]  # Root source directory
include = ["pyproject.toml", "src/**/*.py"]  # Files to include in lint/format
extend-exclude = ["tests"]  # Exclude test directory from checks
fix = true  # Automatically apply safe fixes where possible
indent-width = 2  # Indentation size
output-format = "json"  # Output results
show-fixes = true

[tool.ruff.analyze]
detect-string-imports = true  # Detect dynamic imports

[tool.ruff.format]
skip-magic-trailing-comma = true  # Disable Black-style trailing comma behavior

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"] # Enable specific rule groups: E = pycodestyle errors F = pyflakes (logic issues) B = bugbear (common pitfalls) Q = quote consistency

extend-select = ["I"]  # Add import sorting rules (isort integration)

[tool.ruff.lint.isort]
known-first-party = ["src"]  # Treat "src" as first-party module (not external)
force-sort-within-sections = true  # Enforce sorting inside import sections


# Pytest
[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
